# accredit

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
crates/accredit-types/: Cargo.toml
crates/accredit-types/src/: blacklist.rs  kyc.rs  lib.rs  limits.rs  whitelist.rs
docs/: architecture.md  integration.md
docs/programs/: compliant-registry.md  transfer-hook.md
docs/sdk/: getting-started.md  router.md
programs/compliant-registry/: Cargo.toml
programs/compliant-registry/src/: lib.rs  state.rs
programs/sovereign/: Cargo.toml
programs/sovereign/src/instructions/creator_dao/: cast_vote.rs
programs/sovereign/src/state/: creator_dao.rs  identity.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
programs/transfer-hook/src/state/: mod.rs
scripts/: migrate-whitelist-pdas.ts
tests/: compliant-registry.ts  router.ts  transfer-hook.ts
