[workspace]
members = [
    "crates/accredit-types",
    "programs/transfer-hook",
    "programs/compliant-registry"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/accredit/accredit"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.8.2"
solana-program = "2.2.1"
accredit-types = { path = "crates/accredit-types" }

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
