[package]
name = "compliant-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compliance-aware pool registry for institutional DeFi routing"

[lib]
crate-type = ["cdylib", "lib"]
name = "compliant_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }
accredit-types = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
